@@ -1,3 +1,13 @@
+2007-06-18  Kohei Yoshida  <kyoshida@novell.com>
+	
+	* source/numeric/polyeqnsolver_test.cxx: re-organized the code a bit.
+	
+	* source/inc/numeric/quadfitlinesearch.hxx:
+	* source/numeric/quadfitlinesearch.cxx:
+	* source/numeric/quadfitlinesearch_test.cxx:
+	* workben/unittest/Makefile: added new class QuadFitLineSearch and its
+	  test case to implement a quadratic fit line search algorithm.
+
 2007-06-17  Kohei Yoshida  <kyoshida@novell.com>
 
 	* source/inc/numeric/polyeqnsolver.hxx: 
